@@ -1131,6 +1131,26 @@ literal|':'
 operator|||
 name|ch
 operator|==
+literal|' '
+operator|||
+name|ch
+operator|==
+literal|'<'
+operator|||
+name|ch
+operator|==
+literal|'>'
+operator|||
+name|ch
+operator|==
+literal|'='
+operator|||
+name|ch
+operator|==
+literal|'/'
+operator|||
+name|ch
+operator|==
 literal|'.'
 condition|)
 block|{
